--- a/src/pug/sections/_technology-content.pug
+++ b/src/pug/sections/_technology-content.pug
@@ -31,24 +31,47 @@ section.technology
 					p Представляем новинку от NorthBloom! Комплекс усовершенствований для демисезонной одежды.
 			
 			//=====video acordion====
+			//- .technology-acordion
+			//- 	//=========acordion========
+			//- 	.accordion-group.accordion-group--light
+			//- 		//=======single item =====
+			//- 		.accordion-header.txt-20 Наши технологии  (название ролика 1)
+			//- 		.accordion-body
+			//- 			.video-wrapper
+			//- 				video.video.lazy( playsinline)
+			//- 					source(src="./video/video.mp4", type="video/mp4")
+			//- 				//==== btn play ====
+			//- 				button.btn-play
+			//- 				.video-poster
+			//- 					img.lazy.img-cover(src="./img/poster.webp")
+			//- 		//=======single item =====	
+			//- 		.accordion-header.txt-20 Наши технологии  (название ролика 1)
+			//- 		.accordion-body
+			//- 			.video-wrapper
+			//- 				video.video.lazy( playsinline)
+			//- 					source(src="./video/video.mp4", type="video/mp4")
+			//- 				//==== btn play ====
+			//- 				button.btn-play
+			//- 				.video-poster
+			//- 					img.lazy.img-cover(src="./img/poster.webp")
 			.technology-acordion
 				//=========acordion========
 				.accordion-group.accordion-group--light
 					//=======single item =====
-					.accordion-header.txt-20 Наши технологии  (название ролика 1)
+					.accordion-header.txt-20 Наши технологии (название ролика 1)
 					.accordion-body
 						.video-wrapper
-							video.video.lazy( playsinline)
+							video.video.lazy(playsinline)
 								source(src="./video/video.mp4", type="video/mp4")
 							//==== btn play ====
 							button.btn-play
 							.video-poster
 								img.lazy.img-cover(src="./img/poster.webp")
-					//=======single item =====	
-					.accordion-header.txt-20 Наши технологии  (название ролика 1)
+					//=======single item =====  
+					.accordion-header.txt-20 Наши технологии (название ролика 1)
 					.accordion-body
 						.video-wrapper
-							video.video.lazy( playsinline)
+							video.video.lazy(playsinline)
 								source(src="./video/video.mp4", type="video/mp4")
 							//==== btn play ====
 							button.btn-play
