add-btn-wrapper

--- a/src/pug/sections/_technology-content.pug
+++ b/src/pug/sections/_technology-content.pug
@@ -35,13 +35,14 @@ section.technology
 				//=========acordion========
 				.accordion-group.accordion-group--light
 					//=======single item =====
-					.accordion-header.open.txt-20 Наши технологии (название ролика 1)
+					.accordion-header.open.txt-20 Наши технологии (название ролика 1). Название обрезается троеточием, когда длинное
 					.accordion-body(style="display:block;")
 						.video-wrapper
 							video.video.lazy(playsinline)
 								source(src="./video/video.mp4", type="video/mp4")
 							//==== btn play ====
-							button.btn-play
+							.btn-play-wrapper	
+								button.btn-play
 							.video-poster
 								img.lazy.img-cover(src="./img/poster.webp")
 					//=======single item =====  
@@ -51,6 +52,40 @@ section.technology
 							video.video.lazy(playsinline)
 								source(src="./video/video.mp4", type="video/mp4")
 							//==== btn play ====
-							button.btn-play
+							.btn-play-wrapper	
+								button.btn-play
+							.video-poster
+								img.lazy.img-cover(src="./img/poster.webp")
+					//=======single item =====  
+					.accordion-header.txt-20 Наши технологии (название ролика 1)
+					.accordion-body
+						.video-wrapper
+							video.video.lazy(playsinline)
+								source(src="./video/video.mp4", type="video/mp4")
+							//==== btn play ====
+							.btn-play-wrapper	
+								button.btn-play
+							.video-poster
+								img.lazy.img-cover(src="./img/poster.webp")
+					//=======single item =====  
+					.accordion-header.txt-20 Наши технологии (название ролика 1)
+					.accordion-body
+						.video-wrapper
+							video.video.lazy(playsinline)
+								source(src="./video/video.mp4", type="video/mp4")
+							//==== btn play ====
+							.btn-play-wrapper
+								button.btn-play
+							.video-poster
+								img.lazy.img-cover(src="./img/poster.webp")
+					//=======single item =====  
+					.accordion-header.txt-20 Наши технологии (название ролика 1)
+					.accordion-body
+						.video-wrapper
+							video.video.lazy(playsinline)
+								source(src="./video/video.mp4", type="video/mp4")
+							//==== btn play ====
+							.btn-play-wrapper
+								button.btn-play
 							.video-poster
 								img.lazy.img-cover(src="./img/poster.webp")
