--- a/src/scss/sections/_technology-content.scss
+++ b/src/scss/sections/_technology-content.scss
@@ -11,6 +11,14 @@
 }
 .technology-acordion{
 	margin-left: calc($column-width * 1) !important;
+	.accordion-header{
+		padding: 8px 0;
+		padding-right: 34px;
+		white-space: nowrap;
+		overflow: hidden;
+		width: 100%;
+		text-overflow: ellipsis;
+	}
 	@media(max-width:1799px) {
 			margin-left: 0;
 		}
@@ -25,6 +33,7 @@
 		height: 100%;
 		object-fit: cover;
 	}
+	
 	.btn-play{
 		position: absolute;
 		top: 50%;
@@ -32,11 +41,12 @@
 		transform: translate(-50%, -50%);
 		z-index: 3;
 	}
-	.video-poster{
+	.btn-play-wrapper,.video-poster{
 		position: absolute;
 		inset: 0;
 		z-index: 2;
 	}
+	.btn-play-wrapper{z-index: 3;}
 	&.active{
 		.btn-play{display: none}
 		.video-poster{display: none;}
