--- a/src/pug/sections/_technology-content.pug
+++ b/src/pug/sections/_technology-content.pug
@@ -41,8 +41,19 @@ section.technology
 							video.video.lazy(playsinline)
 								source(src="./video/video.mp4", type="video/mp4")
 							//==== btn play ====
-							.btn-play-wrapper	
-								button.btn-play
+							button.btn-play-wrapper
+								span.btn-play
+							.video-poster
+								img.lazy.img-cover(src="./img/poster.webp")
+					//=======single item =====
+					.accordion-header.txt-20 Наши технологии (название ролика 1)
+					.accordion-body
+						.video-wrapper
+							video.video.lazy(playsinline)
+								source(src="./video/video.mp4", type="video/mp4")
+							//==== btn play ====
+							button.btn-play-wrapper
+								span.btn-play
 							.video-poster
 								img.lazy.img-cover(src="./img/poster.webp")
 					//=======single item =====  
@@ -52,8 +63,8 @@ section.technology
 							video.video.lazy(playsinline)
 								source(src="./video/video.mp4", type="video/mp4")
 							//==== btn play ====
-							.btn-play-wrapper	
-								button.btn-play
+							button.btn-play-wrapper
+								span.btn-play
 							.video-poster
 								img.lazy.img-cover(src="./img/poster.webp")
 					//=======single item =====  
@@ -63,8 +74,8 @@ section.technology
 							video.video.lazy(playsinline)
 								source(src="./video/video.mp4", type="video/mp4")
 							//==== btn play ====
-							.btn-play-wrapper	
-								button.btn-play
+							button.btn-play-wrapper
+								span.btn-play
 							.video-poster
 								img.lazy.img-cover(src="./img/poster.webp")
 					//=======single item =====  
@@ -74,18 +85,7 @@ section.technology
 							video.video.lazy(playsinline)
 								source(src="./video/video.mp4", type="video/mp4")
 							//==== btn play ====
-							.btn-play-wrapper
-								button.btn-play
-							.video-poster
-								img.lazy.img-cover(src="./img/poster.webp")
-					//=======single item =====  
-					.accordion-header.txt-20 Наши технологии (название ролика 1)
-					.accordion-body
-						.video-wrapper
-							video.video.lazy(playsinline)
-								source(src="./video/video.mp4", type="video/mp4")
-							//==== btn play ====
-							.btn-play-wrapper
-								button.btn-play
+							button.btn-play-wrapper
+								span.btn-play
 							.video-poster
 								img.lazy.img-cover(src="./img/poster.webp")
