add-vacance-page

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -20,5 +20,7 @@ block content
 				span Страница товара
 			a(href="technology.html")
 				span Материалы и технологии
+			a(href="vacancies.html")
+				span Вакансии
 block variables
 	-var title = "Start page";
