--- a/src/pug/pages/single-product.pug
+++ b/src/pug/pages/single-product.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-	.page-wrapper.page-wrapper--white
+	.page-wrapper.page-wrapper--white#product-page
 		include ../sections/_header
 		main.inner-main.pt-md-0
 
