--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,6 +28,7 @@
 @import "blocks/_size-table.scss";
 
 @import "sections/_technology-content.scss";
+@import "sections/_vacance-content.scss";
 
 
 @import "sections/_footer.scss";
