add-vacancy-accor

--- a/src/pug/pages/single-product.pug
+++ b/src/pug/pages/single-product.pug
@@ -8,7 +8,7 @@ block content
 			include ../sections/_single-product
 
 		include ../sections/_footer
-		
+		include ../blocks/_modal-table-size
 
 block variables
 	-var title = "Страница товара";
