--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,10 +1,11 @@
+//============FOOTER============
 footer.footer
 	.container
 		.content-grid.footer-top
 			.footer-logo
 				a(href="#!").logo
 					+svg-icon('logo')
-			
+			//========nav column========
 			nav.menu-nav
 				//=====block====
 				.menu-nav-block
@@ -16,7 +17,7 @@ footer.footer
 					.semi-16 Для женщин
 					a(href="#!") Весна 2024  Женская коллекция
 					a(href="#!") Зима 2024 Женская коллекция
-		
+			//========nav column========
 			nav.menu-nav.menu-nav--right
 				//=====block====
 				.menu-nav-block
@@ -31,12 +32,13 @@ footer.footer
 					a(href="#!") Таблица размеров
 					a(href="#!") Уход за изделеем
 
-		//======FOOTER ROW====
+		//======FOOTER BOTTOM ROW====
 		.footer-bottom.d-flex
 			.footer-copiryght
 				p &copy;NorthBloom  1997 - 2024 г.
 			
 			.footer-bottom__right.d-flex
+				//======social=======
 				.social-block
 					a(href="#!")
 						img(src="./img/svg-social/vk2.svg" alt="vk")
@@ -46,6 +48,6 @@ footer.footer
 						img(src="./img/svg-social/dzen2.svg" alt="dzen")
 					a(href="#!")
 						img(src="./img/svg-social/tg2.svg" alt="tg")
-				
+				//=======btn======
 				.footer-button
 					button(type="button").btn.btn--slim Написать вопрос директору
