--- a/src/pug/sections/_vacant-content.pug
+++ b/src/pug/sections/_vacant-content.pug
@@ -19,6 +19,7 @@ section.vacacies
 				.accordion-group
 					//=======single item =====
 					.accordion-header.txt-20 Технолог швейного производства
+					//===== для текста, который набирается из админки и стилизуется не по классам, а по тегам,  надо добавить родителю класс  .custom-text В данном случае он добавлен диву  с классом .accordion-body ======
 					.accordion-body.custom-text
 						p Технолог швейных изделий – это специалист, который отвечает за создание новых моделей одежды и подготовку их к массовому производству.  В его обязанности входит разработка конструкции новых моделей, подбор  тканей и фурнитуры, расчёт норм материалов и времени производства.
 						p Требуемый опыт работы: более 6 лет
@@ -30,10 +31,27 @@ section.vacacies
 							li Знание  технологий по производству швейных изделий и умение работать с  различными материалами, знание особенностей тканей и конструкций  изделий.
 							li Коммуникабельность и умение сотрудничать с  нашими конструкторами и технологами других производств с целью поиска  оптимальных решений.
 							li Организационные навыки и умение планировать свою работу.
-
+						h3 Условия ​​​​​​:
+						ul
+							li Предлагаем теплую атмосферу молодой компании, гибких процессов и прозрачности;
+							li Собираем сильную команду профессионалов;
+							li Обращаемся на «ты» вне зависимости от должности и возраста - без чинов и иерархий;
+							li Ответственно подходим ко всему в компании - «это моё дело» и «мне не всё равно»
+							li Работа в график 5/2 , район станции метро Пионерская
 					
-					
+						button.btn-accent.w-100(data-target="modal-vacancy") Откликнуться 
 					//=======single item =====
-					.accordion-header.txt-20 Вы работаете только с гражданами РФ?
+					.accordion-header.txt-20 Менеджер
 					.accordion-body
 						p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit nostrum error hic illum eius consequatur molestiae repellat fugiat quae porro cum excepturi nulla fugit, vero suscipit minus exercitationem quam veritatis!
+						button.btn-accent.w-100(data-target="modal-vacancy")  Откликнуться 
+					//=======single item =====
+					.accordion-header.txt-20 Швея
+					.accordion-body.custom-text
+						p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit nostrum error hic illum eius consequatur molestiae repellat fugiat quae porro cum excepturi nulla fugit, vero suscipit minus exercitationem quam veritatis!
+						button.btn-accent.w-100(data-target="modal-vacancy")  Откликнуться 
+					//=======single item =====
+					.accordion-header.txt-20 Продавец
+					.accordion-body.custom-text
+						p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit nostrum error hic illum eius consequatur molestiae repellat fugiat quae porro cum excepturi nulla fugit, vero suscipit minus exercitationem quam veritatis!
+						button.btn-accent.w-100(data-target="modal-vacancy")  Откликнуться
