--- a/src/pug/pages/vacancies.pug
+++ b/src/pug/pages/vacancies.pug
@@ -7,6 +7,7 @@ block content
 			include ../sections/_vacant-content
 
 		include ../sections/_footer
+		include ../blocks/_modal-vacancy-form
 		
 
 block variables
