--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -126,15 +126,20 @@
 	margin-left: 16px;
 }
 .custom-text {
+	&>*+*{margin-top: 32px!important;}
+	p+p{margin-top: 12px!important;}
 	ul{
 		padding-left: 16px;
 		list-style-type: disc;
 	}
-	h3+ ul{margin-top: 40px;}
+	
 	h3, h4,h5,h6{
 		font-weight: 600;
 		font-size: 16px;
 		line-height: 1.5;
 		margin-top: 32px;
+		&+ul{
+			margin-top: 16px!important;
+		}
 	}
 }
