--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -38,6 +38,7 @@
 
 	*{color: var(--text-black)!important;}
 }
+.header.header-white-bg{background-color: var(--style)!important;}
 .header:hover{
 	background-color: var(--style);
 	* {color: var(--text-black) !important;}
