--- a/src/pug/sections/_authoriz-form.pug
+++ b/src/pug/sections/_authoriz-form.pug
@@ -8,8 +8,8 @@
 	
 	//====form====	
 	form.authoriz-form(action="" method="method")
-		+form-item('', '', "Введите логин", "name", '')
-		+form-item('', '', "Введите пароль", "pass", 'pass')
+		+form-item("Введите логин", "name")
+		+form-item-passw
 		.form-btn
 			button(type="submit").btn-accent.w-100 Войти
 		.form-item
