modal-body-add-scroll

--- a/src/pug/sections/_vacant-content.pug
+++ b/src/pug/sections/_vacant-content.pug
@@ -42,7 +42,7 @@ section.vacacies
 						button.btn-accent.w-100(data-target="modal-vacancy") Откликнуться 
 					//=======single item =====
 					.accordion-header.txt-20 Менеджер
-					.accordion-body
+					.accordion-body.custom-text
 						p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit nostrum error hic illum eius consequatur molestiae repellat fugiat quae porro cum excepturi nulla fugit, vero suscipit minus exercitationem quam veritatis!
 						button.btn-accent.w-100(data-target="modal-vacancy")  Откликнуться 
 					//=======single item =====
