--- a/src/pug/blocks/_modal-vacancy-form.pug
+++ b/src/pug/blocks/_modal-vacancy-form.pug
@@ -1,5 +1,5 @@
 //=========MODAL VACANCY FORM (открывается по клику на элемент с data-target="modal-vacancy")=======
-.modal-wrapper.active(data-modal="modal-vacancy")
+.modal-wrapper(data-modal="modal-vacancy")
 	.modal-body.bg-grey.form-wrapper.form-wrapper--large
 		//===btn close popup ===
 		button(type="button" data-role="modal-close").btn-close
