modal-wrapper-success

--- a/src/pug/blocks/_modal-vacancy-form.pug
+++ b/src/pug/blocks/_modal-vacancy-form.pug
@@ -24,7 +24,7 @@
 						span.file-text Прикрепить файл
 						+svg-icon('paper')
 			.form-btn
-				button(type="submit").btn-accent.w-100 Отправить
+				button(type="submit" data-target="modal-succes-form").btn-accent.w-100 Отправить
 			.form-item.txt-center
 				.txt-14.txt-center Нажимая кнопку «Зарегистрироваться», вы принимаете <br> условия пользовательского соглашения
 				
