--- a/src/pug/pages/vacancies.pug
+++ b/src/pug/pages/vacancies.pug
@@ -8,6 +8,7 @@ block content
 
 		include ../sections/_footer
 		include ../blocks/_modal-vacancy-form
+		include ../blocks/_modal-success-send
 		
 
 block variables
