--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import "blocks/_header-search.scss";
 @import "blocks/_swiper.scss";
 @import "blocks/_modal.scss";
+@import "blocks/_modal-success-send.scss";
 
 
 @import "blocks/_cooki-popup.scss";
@@ -29,6 +30,7 @@
 
 @import "sections/_technology-content.scss";
 @import "sections/_vacance-content.scss";
+
 
 
 @import "sections/_footer.scss";
