fix-header-bg-autoriz-page

--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -31,6 +31,7 @@
 .header.header--special:not( .active){
 	@media (max-width: 767px) {
 		background-color: transparent;
+		&:hover{background-color: var(--style);}
 	}
 }
 .header.active{
