--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -27,13 +27,13 @@
 			width:100%;
 			padding: 48px 14px;
 			height: 100%;
-			max-height: 100dvh;;
+			max-height: calc(100dvh - 56px);
 			
 		}
 	}
 	@media (max-width: 767px) {
 	   top:56px;
-	   min-height: unset;
-	   bottom: 0;
+	   min-height: calc(100dvh - 56px);
+	//    bottom: 0;
 	}
 }
