--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -13,7 +13,7 @@ block content
 			a(href="partners-form.html")
 				span Стать партнером(форма)
 			a(href="partners-success.html")
-				span Заявка принята!
+				span Заявка партнерства принята!
 			a(href="catalogy.html")
 				span Каталог
 			a(href="single-product.html")
@@ -22,5 +22,7 @@ block content
 				span Материалы и технологии
 			a(href="vacancies.html")
 				span Вакансии
+			a(href="success-form-send.html")
+				span Заявка на вакансию принята
 block variables
 	-var title = "Start page";
