--- a/src/pug/pages/success-form-send.pug
+++ b/src/pug/pages/success-form-send.pug
@@ -4,11 +4,9 @@ block content
 	.page-wrapper.page-wrapper--white
 		include ../sections/_header
 		main.inner-main
-			include ../sections/_vacant-content
+			
+		include ../blocks/_modal-success-send
 
-		include ../sections/_footer
-		include ../blocks/_modal-vacancy-form
-		
 
 block variables
-	-var title = "Вакансии";
+	-var title = "Заявка принята";
