--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -24,5 +24,7 @@ block content
 				span Вакансии
 			a(href="success-form-send.html")
 				span Заявка на вакансию принята
+			a(href="contacts.html")
+				span Контакты
 block variables
 	-var title = "Start page";
