--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,7 @@
 
 @import "sections/_technology-content.scss";
 @import "sections/_vacance-content.scss";
+@import "sections/_contacts-content.scss";
 
 
 
