--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -26,5 +26,7 @@ block content
 				span Заявка на вакансию принята
 			a(href="contacts.html")
 				span Контакты
+			a(href="stores.html")
+				span Магазины
 block variables
 	-var title = "Start page";
