--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -27,7 +27,7 @@ header.header#header.header--special
 								li
 									a(href="#!") Коллекция Женская Лето 2024
 					li.menu-list-item
-						a(href="#!") Где купить
+						a(href="stores.html") Где купить
 					//====пункт виден в мобильном меню
 					li.menu-list-item.d-none.d-md-block
 						a(href="#!") Оптовикам	
