--- a/src/pug/sections/_vacant-content.pug
+++ b/src/pug/sections/_vacant-content.pug
@@ -3,7 +3,7 @@ section.vacacies
 		//====хлебные крошки===
 		.breadcrumbs
 			//===ссылки отображаются на десктоп версии и скрываются на < 1024px
-			a(href="#!") Главная
+			a(href="index.html") Главная
 			a(href="#!") о компании
 			a(href="#!") вакансии
 		
