--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -65,9 +65,9 @@ html(lang="ru")
 				.container-dashboard__content
 					h3 Custom select
 					div.dark-bg(style="padding:30px;")
-						+select(plh="Пример заполнения", inpName = 'input_name')
+						+select(plh="Пример заполнения", inpName = 'input_name', 'Выбрать город')
 					pre.
-						+select(plh="Пример заполнения", inpName = 'input_name')
+						+select(plh="Пример заполнения", inpName = 'input_name', 'Выбрать город')
 					hr
 					h3 Поле в форме поиска
 					.search-form
