--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -228,7 +228,7 @@ textarea, select {
   width: 100%;
   text-align: left;
 
-  background: var(--style);
+  background-color: var(--imput-imput-gray);
   border: 1px solid var(--style);
   height: 64px;
 
