--- a/src/pug/sections/_technology-content.pug
+++ b/src/pug/sections/_technology-content.pug
@@ -3,7 +3,7 @@ section.technology
 		//====хлебные крошки===
 		.breadcrumbs
 			//===ссылки отображаются на десктоп версии и скрываются на < 1024px
-			a(href="#!") Главная
+			a(href="index.html") Главная
 			a(href="#!")  Материалы и технологии
 		
 		//====заголовок===
