--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 @import "sections/_technology-content.scss";
 @import "sections/_vacance-content.scss";
 @import "sections/_contacts-content.scss";
+@import "sections/_stores-content.scss";
 
 
 
