add-filters-block

--- a/src/pug/sections/_catalogy-content.pug
+++ b/src/pug/sections/_catalogy-content.pug
@@ -8,7 +8,7 @@ section.catalogy
 			p
 				a(href="index.html").txt-24.chevron-link
 					svg.svg-chevron-left
-						use(href='../img/sprite.svg#svg-chevron-left')
+						use(href='./img/sprite.svg#svg-chevron-left')
 					span Вернуться
 		.section-title
 			h1.h1-serif Весна 2024 для мужчин
@@ -32,7 +32,6 @@ section.catalogy
 					source(srcset="./img/hit-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 					source(srcset="./img/hit-w375.webp", media="(max-width: 767px)")
 					source(srcset="./img/hit@2x.webp", media="(min-resolution: 192dpi)")
-					source(srcset="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg" type="image/jpg")
 						
 					img.img-cover.lazy(src="./img/hit.webp", alt="")
 			
