--- a/src/pug/sections/_stores-content.pug
+++ b/src/pug/sections/_stores-content.pug
@@ -6,14 +6,13 @@ section.stores
 			a(href="index.html") Главная
 			a(href="#!")  Где купить
 		
-		.filters-block
-			.filters-block.flx-center
-				+select2("Название города", 'city_name')(class="filter-select")
-				+select2("Тип магазина", 'store_type')(class="filter-select")
-				.display-togggle.flx-center
-					.display-table.flx-center
-						+svg-icon('bar')
-						span Список
-					.display-map.flx-center
-						+svg-icon('pin')
-						span На карте
+		.filters-block.flx-center
+			+select2("Название города", 'city_name')(class="filter-select")
+			+select2("Тип магазина", 'store_type')(class="filter-select")
+			.display-togggle.flx-center.toggle-group
+				.display-table.toggle-item.active
+					+svg-icon('bar')
+					span Список
+				.display-map.toggle-item
+					+svg-icon('pin')
+					span На карте
