--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "blocks/_preloader.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_form.scss";
+@import "blocks/_filters-block.scss";
 @import "blocks/_header-menu.scss";
 @import "blocks/_header-search.scss";
 @import "blocks/_swiper.scss";
